--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,23 @@ font-weight: 700;
     color: #404bbf;
 }
 
+h1, h2, h3, p {margin: 0;}
+
+ul {padding-left: 0;
+margin: 0;}
+
+img {display: block;}
+
+.container {
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+
+.header {padding-top: 24px;
+padding-bottom: 24px;}
+
 .contact-info {font-style: normal;}
 
 .nav-element {font-weight: 500;
@@ -59,7 +76,18 @@ color: #2e2f42;}
     letter-spacing: 0.02em;
     text-align: center;
     color: #ffff;
+    padding-top: 188px;
+    padding-bottom: 292px;
+    margin-bottom: 48px;
 }
+
+.section-two {
+    background-color: #ffffff;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.section-two .list-title {margin-bottom: 8px;}
 
 .main-button {font-weight: 500;
     font-size: 16px;
@@ -69,6 +97,10 @@ color: #2e2f42;}
 background-color: #4D5AE5;
 cursor: pointer; font-family: "Roboto",
 sans-serif;
+padding-top: 16px;
+padding-bottom: 16px;
+padding-right: 32px;
+padding-left: 32px;
 }
 
 
@@ -103,13 +135,49 @@ sans-serif;
 
 .section-three {
     background-color: #f4f4fd;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
+
+.photo-team {border-radius: 0 0 4px 4px;
+    padding: 0px 0px 32px 0px;
+    width: 264px;
+    height: 380px;
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    }
+
+.section-three .list-title {margin-top: 32px;
+margin-bottom: 8px;}
+
+.section-three .section-title {margin-bottom: 72px;}
+
+.section-three .list-text {padding-bottom: 32px;}
 
 .photo-team {background-color: #FFFFFF;}
 
-footer {background-color: #2e2f42;}
+.section-four {background-color: #FFFFFF;
+padding-top: 120px;
+padding-bottom: 120px;}
 
-.footer-section .list-text {color: #F4F4FD;}
+.portfolio-list {display: flex;
+flex-wrap: wrap;
+gap: 24px;}
+
+.portfolio-item {border: 1px solid #e7e9fc;
+    width: 360px;
+    height: 420px;}
+
+.section-four .section-title {margin-bottom: 72px;}
+
+.section-four .list-title {margin-top: 32px;
+margin-bottom: 8px;}
+
+.footer-section {background-color: #2e2f42;
+padding-top: 100px;
+padding-bottom: 100px;}
+
+.footer-section .list-text {color: #F4F4FD;
+margin-top: 16px;}
 
 .footer-section .logo-studio {color: #F4F4FD;}
 
