--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,23 @@ font-weight: 700;
     color: #404bbf;
 }
 
+.header-nav {
+    display: flex;
+}
+
+.header-nav-list {display: flex;
+gap: 40px;}
+
+.header-adress-list {display: flex;
+gap: 40px;}
+    
+.contact-info {margin-left: auto;
+}
+
+.header-container {display: flex;}
+
+.logo-web {margin-right: 76px;}
+
 h1, h2, h3, p {margin: 0;}
 
 ul {padding-left: 0;
@@ -68,7 +85,9 @@ color: #2e2f42;}
 
 .adress-element:focus {color: #404bbf;}
 
-.section-one {background-color: #2E2F42;}
+.section-one {background-color: #2E2F42;
+padding-top: 188px;
+    padding-bottom: 292px;}
 
 .section-one .main-title {font-weight: 700;
     font-size: 56px;
@@ -76,8 +95,9 @@ color: #2e2f42;}
     letter-spacing: 0.02em;
     text-align: center;
     color: #ffff;
-    padding-top: 188px;
-    padding-bottom: 292px;
+    max-width: 496px;
+    margin: 0 auto;
+    text-align: center;
     margin-bottom: 48px;
 }
 
@@ -97,10 +117,10 @@ color: #2e2f42;}
 background-color: #4D5AE5;
 cursor: pointer; font-family: "Roboto",
 sans-serif;
-padding-top: 16px;
-padding-bottom: 16px;
-padding-right: 32px;
-padding-left: 32px;
+min-width: 169px;
+height: 56px;
+display: block;
+margin: 0 auto;
 }
 
 
@@ -111,6 +131,11 @@ padding-left: 32px;
 .main-button:focus {
     background-color: #404bbf;
 }
+
+.section-two-list {display: flex;
+gap: 24px;}
+
+.section-two-item {flex-basis: calc(100% - 72) / 4;}
 
 .list-title {font-weight: 500;
     font-size: 20px;
@@ -139,6 +164,10 @@ padding-left: 32px;
     padding-bottom: 120px;
 }
 
+.section-three-list {display: flex;
+gap: 24px;
+flex-basis: calc(100% - 72) / 4;}
+
 .photo-team {border-radius: 0 0 4px 4px;
     padding: 0px 0px 32px 0px;
     width: 264px;
@@ -147,11 +176,14 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     }
 
 .section-three .list-title {margin-top: 32px;
-margin-bottom: 8px;}
+margin-bottom: 8px;
+text-align: center;}
 
-.section-three .section-title {margin-bottom: 72px;}
+.section-three .section-title {margin-bottom: 72px;
+}
 
-.section-three .list-text {padding-bottom: 32px;}
+.section-three .list-text {padding-bottom: 32px;
+text-align: center;}
 
 .photo-team {background-color: #FFFFFF;}
 
@@ -161,7 +193,7 @@ padding-bottom: 120px;}
 
 .portfolio-list {display: flex;
 flex-wrap: wrap;
-gap: 24px;}
+gap: 48px 24px;}
 
 .portfolio-item {border: 1px solid #e7e9fc;
     width: 360px;
@@ -181,4 +213,10 @@ margin-top: 16px;}
 
 .footer-section .logo-studio {color: #F4F4FD;}
 
+.footer-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-section .list-text {max-width: 264px;}
         
