--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ color: #2e2f42;}
 
 .section-one {background-color: #2E2F42;
 padding-top: 188px;
-    padding-bottom: 292px;}
+    padding: 188px 0}
 
 .section-one .main-title {font-weight: 700;
     font-size: 56px;
@@ -125,6 +125,8 @@ min-width: 169px;
 height: 56px;
 display: block;
 margin: 0 auto;
+border: none;
+border-radius: 4px;
 }
 
 
@@ -145,7 +147,8 @@ gap: 24px;}
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2e2f42;}
+    color: #2e2f42;
+margin-bottom: 8px;}
 
 .list-text {font-weight: 400;
     font-size: 16px;
@@ -166,6 +169,18 @@ gap: 24px;}
     background-color: #f4f4fd;
     padding-top: 120px;
     padding-bottom: 120px;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
 
 .section-three-list {display: flex;
@@ -216,10 +231,6 @@ padding-bottom: 100px;}
 margin-top: 16px;}
 
  .footer-section .logo-studio{color: #F4F4FD;}
-
-.footer-section .logo-web,
- .logo-studio {display: inline-block;
-margin-bottom: 16px;}
 
 .footer-container {
     display: flex;
