--- a/css/styles.css
+++ b/css/styles.css
@@ -105,30 +105,23 @@ padding: 24px 0;}
     margin-bottom: 48px;
 }
 
-.section-two {
-    background-color: #ffffff;
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-.section-two .list-title {margin-bottom: 8px;}
-
-.main-button {font-weight: 500;
+.main-button {
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffff;
-background-color: #4D5AE5;
-cursor: pointer; font-family: "Roboto",
-sans-serif;
-min-width: 169px;
-height: 56px;
-display: block;
-margin: 0 auto;
-border: none;
-border-radius: 4px;
+    background-color: #4D5AE5;
+    cursor: pointer;
+    font-family: "Roboto",
+        sans-serif;
+    min-width: 169px;
+    height: 56px;
+    display: block;
+    margin: 0 auto;
+    border: none;
+    border-radius: 4px;
 }
-
 
 .main-button:hover {
     background-color: #404bbf;
@@ -137,6 +130,26 @@ border-radius: 4px;
 .main-button:focus {
     background-color: #404bbf;
 }
+
+.section-two {
+    background-color: #ffffff;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
+.section-two .list-title {margin-bottom: 8px;}
 
 .section-two-list {display: flex;
 gap: 24px;}
@@ -174,18 +187,6 @@ text-align: center;}
 }
 
 .weird-div {padding: 32px 0;}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
-}
 
 .section-three-list {display: flex;
 gap: 24px;
