--- a/css/styles.css
+++ b/css/styles.css
@@ -141,12 +141,13 @@ padding: 24px 0;}
     position: absolute;
     width: 1px;
     height: 1px;
-    padding: 0;
     margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
     border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .section-two .list-title {margin-bottom: 8px;}
@@ -248,8 +249,7 @@ max-width: 264px;
 margin-bottom: 16px;}
 
 .footer-container {
-    display: flex;
-    flex-direction: column;
+      flex-direction: column;
 }
 
         
