--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ font-weight: 700;
     text-transform: uppercase;
     text-decoration: none;
     color: #4d5ae5;
+    padding-right: 76px;
 }
 
 .logo-studio {color: #2e2f42;}
@@ -22,7 +23,8 @@ font-weight: 700;
     color: #404bbf;
 }
 
-.header {border-bottom: 1px solid #e7e9fc;}
+.header {border-bottom: 1px solid #e7e9fc;
+}
 
 .header-nav {
     display: flex;
@@ -30,7 +32,8 @@ font-weight: 700;
 }
 
 .header-nav-list {display: flex;
-gap: 40px;}
+gap: 40px;
+}
 
 .header-adress-list {display: flex;
 gap: 40px;}
@@ -38,9 +41,10 @@ gap: 40px;}
 .contact-info {margin-left: auto;
 }
 
-.header-container {display: flex;}
-
-.logo-web {margin-right: 76px;}
+.header-container {display: flex;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
 
 h1, h2, h3, p {margin: 0;}
 
@@ -56,9 +60,6 @@ img {display: block;}
     margin: 0 auto;
 }
 
-.header {padding-top: 24px;
-padding-bottom: 24px;}
-
 .contact-info {font-style: normal;}
 
 .nav-element {font-weight: 500;
@@ -67,7 +68,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-decoration: none;
 color: #2e2f42;
-padding: 24px 0;}
+}
 
 .nav-element {
     color: #2e2f42;
@@ -194,10 +195,7 @@ gap: 24px;
 flex-basis: calc(100%-72)/4;}
 
 .photo-team {border-radius: 0 0 4px 4px;
-    padding: 0px 0px 32px 0px;
-    width: 264px;
-    height: 380px;
-box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     }
 
 .section-three .list-title {margin-top: 32px;
@@ -245,8 +243,7 @@ max-width: 264px;
 
  .footer-section .logo-studio{color: #F4F4FD;}
 
- .logo-web {display: inline-block;
-margin-bottom: 16px;}
+ .logo-web {display: inline-block;}
 
 .footer-container {
       flex-direction: column;
