--- a/css/styles.css
+++ b/css/styles.css
@@ -57,8 +57,7 @@ img {display: block;}
 
 .container {
     width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0 15px;
     margin: 0 auto;
 }
 
@@ -70,6 +69,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-decoration: none;
 color: #2e2f42;
+padding: 24px 0ж
 }
 
 .nav-element {
