--- a/css/styles.css
+++ b/css/styles.css
@@ -166,14 +166,14 @@ gap: 24px;}
     letter-spacing: 0.02em;
     color: #2e2f42;
 margin-bottom: 8px;
-text-align: center;}
+}
 
 .list-text {font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-text-align: center;}
+}
 
 .section-title {font-weight: 700;
     font-size: 36px;
@@ -241,10 +241,19 @@ padding-bottom: 100px;}
 max-width: 264px;
 }
 
- .footer-section .logo-studio{color: #F4F4FD;}
+ .footer-logo-web {display: inline-block;
+margin-bottom: 16px;
+font-family: "Raleway",
+    sans-serif;
+font-weight: 700;
+    font-size: 18px;
+    line-height: 1.16667;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #4d5ae5;}
 
- .footer-section .logo-web {display: inline-block;
-margin-bottom: 16px;}
+ .footer-logo-studio {color: #F4F4FD;}
 
 .footer-container {
       flex-direction: column;
